[package]
name = "room-matcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
colored = "2.0.0"
rand = "0.8.5"
serde = { version = "1.0.157", features = ["derive"] }
toml = "0.7.3"
